--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,43 +1,60 @@
-plugins {
-    id 'com.android.application'
-    id 'kotlin-android'
-}
+
+
+apply plugin: 'com.android.application'
+apply plugin: 'kotlin-android'
+apply plugin: 'kotlin-kapt'
 
 android {
-    compileSdk 31
+    android {
+        compileSdkVersion versions.compileSdk
+        defaultConfig {
+            applicationId "com.example.background"
+            renderscriptTargetApi 11
+            renderscriptSupportModeEnabled true
+            vectorDrawables {
+                useSupportLibrary true
+            }
 
-    defaultConfig {
-        applicationId "com.example.workmanager"
-        minSdk 21
-        targetSdk 31
-        versionCode 1
-        versionName "1.0"
+            testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+            // The following argument makes the Android Test Orchestrator run its
+            // "pm clear" command after each test invocation. This command ensures
+            // that the app's state is completely cleared between tests.
+            testInstrumentationRunnerArguments clearPackageData: 'true'
 
-        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
-    }
+            minSdkVersion versions.minSdk
+            targetSdkVersion versions.targetSdk
+            versionCode 1
+            versionName "1.0"
+        }
+        buildTypes {
+            release {
+                minifyEnabled true
+                proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+            }
+        }
+        compileOptions {
+            sourceCompatibility JavaVersion.VERSION_1_8
+            targetCompatibility JavaVersion.VERSION_1_8
+        }
+        kotlinOptions {
+            jvmTarget = "1.8"
+        }
 
-    buildTypes {
-        release {
-            minifyEnabled false
-            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
+        viewBinding {
+            enabled = true
         }
     }
-    compileOptions {
-        sourceCompatibility JavaVersion.VERSION_1_8
-        targetCompatibility JavaVersion.VERSION_1_8
-    }
-    kotlinOptions {
-        jvmTarget = '1.8'
-    }
+
 }
 
 dependencies {
 
-    implementation 'androidx.core:core-ktx:1.3.2'
-    implementation 'androidx.appcompat:appcompat:1.3.1'
-    implementation 'com.google.android.material:material:1.3.0'
-    implementation 'androidx.constraintlayout:constraintlayout:2.1.1'
-    testImplementation 'junit:junit:4.+'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.2'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
+    implementation "androidx.appcompat:appcompat:1.2.0"
+    implementation "androidx.constraintlayout:constraintlayout:2.0.4"
+    implementation "androidx.activity:activity-ktx:1.2.4"
+    implementation "androidx.lifecycle:lifecycle-extensions:2.2.0"
+    implementation 'com.google.android.material:material:1.1.0-alpha09'
+    implementation "androidx.work:work-runtime-ktx:$versions.work"
+    implementation "com.github.bumptech.glide:glide:4.12.0"
+    implementation "org.jetbrains.kotlin:kotlin-stdlib:$versions.kotlin"
 }
