--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,11 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 buildscript {
+    ext.versions = [:]
+    versions.compileSdk = 29
+    versions.minSdk = 16
+    versions.targetSdk = 29
+    versions.kotlin = '1.4.30'
+    versions.work = "2.5.0"
     repositories {
         google()
         mavenCentral()
@@ -16,3 +22,4 @@ buildscript {
 task clean(type: Delete) {
     delete rootProject.buildDir
 }
+
